k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alchemyst
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: "50%"
      maxUnavailable: "50%"
  template:
    spec:
      containers:
        - name: alchemyst
          image: alchemyst:SET_BY_CI
          ports:
            - name: http
              containerPort: 5000
          workingDir: /app
          resources:
            requests:
              cpu: 10m
              memory: 50Mi
            limits:
              cpu: 100m
              memory: 250Mi
      serviceAccountName: alchemyst
      restartPolicy: Always
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: alchemyst
              topologyKey: "kubernetes.io/hostname"
            weight: 100
