k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: alchemyst
spec:
  type: NodePort
  ports:
    - port: 5000
      name: http
