k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: alchemyst
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - secretName: alchemyst-tls
      hosts:
        - alchemyst.co.uk
  rules:
    - host: alchemyst.co.uk
      http:
        paths:
          - path: /
            backend:
              serviceName: alchemyst
              servicePort: http
    - host: www.alchemyst.co.uk
      http:
        paths:
          - path: /
            backend:
              serviceName: alchemyst
              servicePort: http
